feat: upload task attachments to S3
